@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.73.2.35 2003/07/20 12:51:46 mike Exp $"
+ * "$Id: dirsvc.c,v 1.73.2.36 2003/08/01 20:09:21 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -920,7 +920,7 @@ StartPolling(void)
 	if (setgid(Group))
           exit(errno);
 
-	if (setgroups(0, NULL))
+	if (setgroups(1, &Group))
           exit(errno);
 
 	if (setuid(User))
@@ -932,7 +932,7 @@ StartPolling(void)
 	* Reset group membership to just the main one we belong to.
 	*/
 
-	setgroups(0, NULL);
+	setgroups(1, &Group);
       }
 
      /*
@@ -1942,5 +1942,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.73.2.35 2003/07/20 12:51:46 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.73.2.36 2003/08/01 20:09:21 mike Exp $".
  */
